fixed spacing on pagoda section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,9 +154,6 @@ nav .navbar-nav li a:hover {
 /*-------------------------------Home/About Me*/
 
 
-.about-me{
-}
-
 .about-me-text {
     margin-top: 25px;
     margin-left: 15px;
